docs/7.57/md/abennews-46a.md
  

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews.htm) →  [News for Release 4.xx](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-4.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: News for Release 4.6A, ABENNEWS-46A, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASug
gestion for improvement:)

News for Release 4.6A

Changes were made in the following areas as part of development for SAP Basis Release 4.6A:

-   [ABAP Objects - Inheritance and Nested Interfaces in Release 4.6A](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-46-objects-vererbung.htm)
-   [ABAP Objects - Dynamic Method Calls in Release 4.6A](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-46-objects-dynamic.htm)
-   [ABAP Objects - Further Developments in Release 4.6A](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-46-objects-entwicklungen.htm)
-   [ABAP Objects - Obsolete Language Elements in Release 4.6A](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-46-objects-obsolete.htm)
-   [New Data Types string and xstring for Release 4.6A](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-46-strings.htm)
-   [Data Objects and Data References in Release 4.6A](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-46-data-references.htm)
-   [Description of Data Types and Object Types at Runtime in Release 4.6A](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-46-type-identification.htm)
-   [Named Includes in Release 4.6A](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-46-includes.htm)
-   [Casts to Any Data Type in Release 4.6A](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-46-assign-casting.htm)
-   [Dynamic Access to Offsets and Lengths in Release 4.6A](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-46-offset.htm)
-   [Internal Tables in Release 4.6A](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-46-internal-tables.htm)
-   [Runtime Analysis in Release 4.6A](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-46-se30.htm)
-   [Debugger in Release 4.6A](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-46-debugger.htm)
-   [Remote Function Call in Release 4.6A](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-46-rfc.htm)
-   [Further Developments in Release 4.6A](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-46-entwicklungen.htm)
-   [Further Changes in Release 4.6A](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-46-sonstiges.htm)

Earlier Changes in ABAP:

[News for Release 4.0 and 4.5](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-40.htm)
[News for Release 3.0](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-30.htm)
[Changes Before Release 3.0](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-21.htm)

Continue
[ABAP Objects - Inheritance and Nested Interfaces in Release 4.6A](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-46-objects-vererbung.htm)
[ABAP Objects - Dynamic Method Calls in Release 4.6A](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-46-objects-dynamic.htm)
[ABAP Objects - Further Developments in Release 4.6A](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-46-objects-entwicklungen.htm)
[ABAP Objects - Obsolete Language Elements in Release 4.6A](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-46-objects-obsolete.htm)
[New Data Types string and xstring for Release 4.6A](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-46-strings.htm)
[Data Objects and Data References in Release 4.6A](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-46-data-references.htm)
[Description of Data Types and Object Types at Runtime in Release 4.6A](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-46-type-identification.htm)
[Named Includes in Release 4.6A](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-46-includes.htm)
[Casts to Any Data Type in Release 4.6A](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-46-assign-casting.htm)
[Dynamic Access to Offsets and Lengths in Release 4.6A](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-46-offset.htm)
[Internal Tables in Release 4.6A](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-46-internal-tables.htm)
[Runtime Analysis in Release 4.6A](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-46-se30.htm)
[Debugger in Release 4.6A](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-46-debugger.htm)
[Remote Function Call in Release 4.6A](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-46-rfc.htm)
[Further Developments in Release 4.6A](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-46-entwicklungen.htm)
[Further Changes in Release 4.6A](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-46-sonstiges.htm)